# cowork-cli

./: .gitignore  README.md  pyproject.toml  verity-desk-task.md
configs/: default.toml
cowork/: __init__.py  __main__.py  cli.py  config.py  cost.py  display.py  errors.py  roles.py  schemas.py  state.py  supervisor.py  worker.py
cowork/backends/: __init__.py  base.py  claude.py  codex.py
tests/: test_claude_backend.py  test_config.py  test_cost.py  test_schemas.py  test_state.py  test_supervisor.py  test_worker.py
tests/fixtures/: sample_responses.json
