[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowork"
version = "0.1.0"
description = "AI-orchestrated multi-worker CLI tool"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12",
    "click>=8.3",
    "rich>=13.0",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
cowork = "cowork.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
